Rework Earthfile & Initial snapshot presets
Gitignore currently ignores export_presets.cfg.
Automation however requires some settings.
I think it might be beneficial to provide multiple profiles of those presets.

As such this version embraces the gitignore.

--- a/.github/workflows/snapshot.yml
+++ b/.github/workflows/snapshot.yml
@@ -19,7 +19,11 @@ jobs:
         run: earthly --version
 
       - name: Run build
-        run: earthly +build
+        run: |
+            cd game
+            mv export_presets.snapshot.cfg export_presets.cfg
+            cd ..
+            earthly +build
 
         # Publish Artifacts for download
       - uses: actions/upload-artifact@v3
