--- a/game/export_presets.snapshot.cfg
+++ b/game/export_presets.snapshot.cfg
@@ -5,7 +5,7 @@ platform="Windows Desktop"
 runnable=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.cfg"
 exclude_filter=""
 export_path=""
 script_export_mode=1
@@ -47,7 +47,7 @@ platform="Linux/X11"
 runnable=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.cfg"
 exclude_filter=""
 export_path=""
 script_export_mode=1
@@ -72,7 +72,7 @@ platform="HTML5"
 runnable=false
 custom_features=""
 export_filter="all_resources"
-include_filter=""
+include_filter="*.cfg"
 exclude_filter=""
 export_path=""
 script_export_mode=1
